--- a/index.html
+++ b/index.html
@@ -14,8 +14,19 @@
 	 crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
 	 crossorigin="anonymous"></script>
-
+	<script src="lib.js"></script>
+	
 </head>
+
+<script>
+	const addProfileCreator = lib.jlipman['add-profile-creator']['@0.0.1'];
+	(async() => {
+		let result = await addProfileCreator({
+			phrase: "45 year old hispanic male"
+		});
+		document.getElementById("API-result").innerHTML = result;
+	})();
+</script>
 
 <body>
 	<div class="container">
@@ -67,7 +78,7 @@
 		<div class="row request hidden">
 			<div class="col-6"></div>
 			<div class="col-4">
-				<h1>BOILERPLATE</h1>
+				<p id="API-result"></p>
 			</div>
 		</div>
 
