--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 	
 </head>
 
+<script type="text/javascript"
+    src="https://js.authorize.net/v1/Accept.js"
+    charset="utf-8">
+</script>
+
 <script>
 	const addProfileCreator = lib.jlipman['add-profile-creator']['@0.0.1'];
 	(async() => {
@@ -37,6 +42,7 @@
 					<h1>
 						<bold>Masq me</bold>
 					</h1>
+					<p id="API-result"></p>
 				</div>
 			</div>
 		</div>
@@ -71,7 +77,7 @@
 		<div class="row error hidden">
 			<div class="col-6"></div>
 			<div class="col-4">
-				<h1>Error! Could not get data from server.</h1>				
+				<h1>Data Retrieved!</h1>				
 			</div>
 		</div>
 
@@ -79,6 +85,17 @@
 			<div class="col-6"></div>
 			<div class="col-4">
 				<p id="API-result"></p>
+				<form id="paymentForm"
+    				method="POST"
+    				action="https://YourServer/PathToExistingPaymentProcessingScript">
+    				<input type="text" name="cardNumber" id="cardNumber" placeholder="cardNumber"/> <br><br>
+    				<input type="text" name="expMonth" id="expMonth" placeholder="expMonth"/> <br><br>
+    				<input type="text" name="expYear" id="expYear" placeholder="expYear"/> <br><br>
+    				<input type="text" name="cardCode" id="cardCode" placeholder="cardCode"/> <br><br>
+    				<input type="hidden" name="dataValue" id="dataValue" />
+    				<input type="hidden" name="dataDescriptor" id="dataDescriptor" />
+    				<button>Pay</button>
+				</form>
 			</div>
 		</div>
 
